--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,8 @@ djangorestframework==3.15.1
 djangorestframework_simplejwt==5.5.1
 djongo==1.3.6
 dnspython==2.8.0
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.3.0
 PyJWT==2.10.1
 pymongo==3.12.3
